<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.android.flashbackmusicv000.SongListActivity"
    tools:showIn="@layout/activity_song_list">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#d77979"
            android:gravity="center"
            android:text="@string/songs"
            android:textSize="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.00" />

        <Button
            android:id="@+id/song1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/song1"
            android:textAlignment="gravity"
            android:textColor="#595959"
            android:textSize="20dp"
            android:autoSizeMaxTextSize="10dp"
            android:background="#e6e6e6"
            android:ellipsize="marquee"
            style="?android:attr/borderlessButtonStyle"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"
            app:layout_constraintVertical_bias="0.00" />

        <Button
            android:id="@+id/button1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/favorited"
            android:textSize="20dp"
            android:background="#e6e6e6"

            android:shadowColor="#00ffffff"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"/>


        <Button
            android:id="@+id/song2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/song2"
            android:textAlignment="gravity"
            android:textColor="#595959"
            android:textSize="20dp"
            android:background="#e6e6e6"
            android:ellipsize="marquee"
            style="?android:attr/borderlessButtonStyle"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/song1"
            app:layout_constraintVertical_bias="0.00" />

        <Button
            android:id="@+id/button2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/disliked"
            android:textSize="20dp"
            android:background="#e6e6e6"

            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button1" />


        <Button
            android:id="@+id/song3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/song3"
            android:textAlignment="gravity"
            android:textColor="#595959"
            android:textSize="20dp"
            android:background="#e6e6e6"
            android:ellipsize="marquee"
            style="?android:attr/borderlessButtonStyle"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/song2"
            app:layout_constraintVertical_bias="0.00" />

        <Button
            android:id="@+id/button3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/neutral"
            android:textSize="20dp"
            android:background="#e6e6e6"

            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button2" />


        <Button
            android:id="@+id/song4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/song4"
            android:textAlignment="gravity"
            android:textColor="#595959"
            android:textSize="20dp"
            android:background="#e6e6e6"
            android:ellipsize="marquee"
            style="?android:attr/borderlessButtonStyle"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/song3"
            app:layout_constraintVertical_bias="0.00" />

        <Button
            android:id="@+id/button4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/neutral"
            android:textSize="20dp"
            android:background="#e6e6e6"

            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button3" />


        <Button
            android:id="@+id/song5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/song5"
            android:textAlignment="gravity"
            android:textColor="#595959"
            android:textSize="20dp"
            android:background="#e6e6e6"
            android:ellipsize="marquee"
            style="?android:attr/borderlessButtonStyle"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/song4"
            app:layout_constraintVertical_bias="0.00" />

        <Button
            android:id="@+id/button5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/favorited"
            android:textSize="20dp"
            android:background="#e6e6e6"

            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button4" />


        <Button
            android:id="@+id/song6"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/song6"
            android:textAlignment="gravity"
            android:textColor="#595959"
            android:textSize="20dp"
            android:background="#e6e6e6"
            android:ellipsize="marquee"
            style="?android:attr/borderlessButtonStyle"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/song5"
            app:layout_constraintVertical_bias="0.00" />

        <Button
            android:id="@+id/button6"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/neutral"
            android:textSize="20dp"
            android:background="#e6e6e6"

            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button5" />


        <Button
            android:id="@+id/song7"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/song7"
            android:textAlignment="gravity"
            android:textColor="#595959"
            android:textSize="20dp"
            android:background="#e6e6e6"
            android:ellipsize="marquee"
            style="?android:attr/borderlessButtonStyle"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/song6"
            app:layout_constraintVertical_bias="0.00" />

        <Button
            android:id="@+id/button7"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/favorited"
            android:textSize="20dp"
            android:background="#e6e6e6"

            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button6" />


        <Button
            android:id="@+id/song8"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/song8"
            android:textAlignment="gravity"
            android:textColor="#595959"
            android:textSize="20dp"
            android:background="#e6e6e6"
            android:ellipsize="marquee"
            style="?android:attr/borderlessButtonStyle"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/song7"
            app:layout_constraintVertical_bias="0.00" />

        <Button
            android:id="@+id/button8"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/neutral"
            android:textSize="20dp"
            android:background="#e6e6e6"

            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button7" />


        <Button
            android:id="@+id/song9"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/song9"
            android:textAlignment="gravity"
            android:textColor="#595959"
            android:textSize="20dp"
            android:background="#e6e6e6"
            android:ellipsize="marquee"
            style="?android:attr/borderlessButtonStyle"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/song8"
            app:layout_constraintVertical_bias="0.00" />

        <Button
            android:id="@+id/button9"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/neutral"
            android:textSize="20dp"
            android:background="#e6e6e6"

            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button8" />


        <Button
            android:id="@+id/song10"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/song10"
            android:textAlignment="gravity"
            android:textColor="#595959"
            android:textSize="20dp"
            android:background="#e6e6e6"
            android:ellipsize="marquee"
            style="?android:attr/borderlessButtonStyle"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/song9"
            app:layout_constraintVertical_bias="0.00" />

        <Button
            android:id="@+id/button10"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/neutral"
            android:textSize="20dp"
            android:background="#e6e6e6"

            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button9" />


    </android.support.constraint.ConstraintLayout>

</ScrollView>
